<resources>
    <string name="app_name">ParkMap</string>
    <string name="title_activity_maps">Map</string>

    <string name="price_label">Parking price:</string>
    <string name="note_label">Notes:</string>
    <string name="opening_hours_label">Opening hours:</string>

    <string name="autocomplete_hint">Find the nearest parking lot</string>
    <string name="comment_label">Comments:</string>
    <string name="comment_not_available">There\'s no available comments.</string>

    <string name="title_activity_main">ParkMap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_me">Me</string>

    <string name="me_about_us">About Us</string>
    <string name="me_feedback">Feedback</string>
    <string name="me_color_mode">Change Theme</string>
    <string name="me_language">Language</string>

    <string name="next_icon">Next Icon</string>
    <string name="search_hint">Search</string>

    <string name="feedback_caption">Your feedback helps us improve our application and enhance your experience.</string>
    <string name="feedback_title">Feedback Form</string>
    <string name="email_label">Your Email:</string>
    <string name="subject_label">Subject:</string>
    <string name="subject_hint">optional</string>
    <string name="feedback_label">Your feedback:</string>
    <string name="submit_button">Submit</string>

    <string name="not_available_field">This information is not available.</string>
    <string name="feedback_name">Your name:</string>
    <string name="feedback_name_hint">Enter your name here</string>
    <string name="feedback_comment">Comment:</string>
    <string name="feedback_comment_hint">Enter your comment</string>
    <string name="feedback_hint">Your feedback here</string>
    <string name="feedback_ask">Please add feedback so that we can improve our app performance.</string>
    <string name="email_via">Send email via:</string>
    <string name="no_email_clients">There are no email clients installed.</string>
    <string name="no_suggestion_title">No search results</string>
    <string name="no_suggestion_message">We can\'t find any parking lots under 2km around you.</string>
    <string name="no_suggestion_button">OK</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading_message">Loading database...</string>
    <string name="logo">logo</string>
    <string name="about_us_title">About Us</string>
    <string name="app_overall_title">About Us</string>
    <string name="app_overall">ParkMap is a product developed by a group of freshmen from the Advanced Program in Computer Science, class of 2023, of Ho Chi Minh University of Science. This product is due to take part in the Solution Challenge 2020 hosted by Google Developer Students Club Community.</string>
    <string name="app_purpose_title">Purpose</string>
    <string name="app_purpose">Based on the local massive usage of personal motorbikes, we found the need for a light-weight application that can help people locate the nearest parking lot so as to avoid wasting their time under the humid weather of Ho Chi Minh City.</string>
    <string name="app_help_title">Help Us</string>
    <string name="app_help">We would appreciate your help to improve our application performance or broaden our database by contacting us directly at parkmap@gmail.com.</string>
    <string name="solution_challenge">solution challenge</string>
    <string name="motorbikes">motorbikes</string>
    <string name="feedback_prompt">Give feedback</string>
    <string name="no_location_title">Can\'t find location</string>
    <string name="no_location_message">We can\'t find your current location. Please check for permission again or restart app.</string>
    <string name="no_location_button">OK</string>
    <string name="me_how_to">How to use</string>
    <string name="how_to_title">How to use</string>
    <string name="from_home_tab">From Home Tab</string>
    <string name="choose_place">- Find and choose a place from search bar:</string>
    <string name="gps">- Click the GPS Icon to locate you:</string>
    <string name="from_dashboard_tab">From Dashboard Tab</string>
    <string name="search">- Search your keyword from the whole database:</string>
    <string name="feedback_alert_title">Lose information</string>
    <string name="feedback_alert_msg">You haven\'t sent your feedback yet. Going back will lose your information. Are you sure?</string>
    <string name="feedback_alert_negative_button">Go back anyway</string>
    <string name="feedback_alert_positive_button">Stay here</string>

</resources>
