<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/rating_name"
        android:text="@string/feedback_name" />

    <EditText
        android:id="@+id/rating_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedback_name_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_comment" />

    <EditText
        android:id="@+id/rating_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/feedback_comment_hint"
        android:inputType="textMultiLine"
        android:lines="6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit_button" />
</LinearLayout>