<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layoutBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/about_us_title"
            app:titleTextColor="@color/whiteText" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_overall_title" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/solution_challenge"
                android:scaleType="centerCrop"
                android:src="@drawable/solution_challenge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/textCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:justificationMode="inter_word"
                    android:paddingBottom="8dp"
                    android:text="@string/app_overall" />

            </LinearLayout>

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_purpose_title" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/motorbikes"
                android:scaleType="centerCrop"
                android:src="@drawable/motorbikes" />

            <TextView
                style="@style/textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:paddingBottom="8dp"
                android:text="@string/app_purpose" />

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/app_help_title" />

            <TextView
                style="@style/textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:justificationMode="inter_word"
                android:paddingBottom="8dp"
                android:text="@string/app_help" />

            <Button
                style="@style/textMenu"
                android:id="@+id/feedback_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background_selector"
                android:text="@string/feedback_prompt" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>