<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/feedback_title"
            app:titleTextColor="@color/whiteText" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="8dp"
        android:text="@string/feedback_caption"
        android:textAlignment="center"
        android:textColor="@color/quantum_grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/subject_label"
        android:textColor="@color/blackText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:cursorVisible="true"
        android:hint="@string/subject_hint"
        android:inputType="textMultiLine|textEmailSubject"
        android:maxLines="2"
        android:textSize="14sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/feedback_label"
        android:textColor="@color/blackText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:cursorVisible="true"
        android:gravity="top"
        android:hint="@string/feedback_hint"
        android:inputType="textMultiLine|textCapSentences"
        android:lines="8"
        android:textSize="14sp" />

    <Button
        android:id="@+id/submit_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_background_selector"
        android:text="@string/submit_button" />
</LinearLayout>