<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main_ui.me.HowToActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/how_to_title"
            app:titleTextColor="@color/whiteText" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/from_home_tab" />

            <TextView
                style="@style/textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/choose_place" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/choose_place" />

            <TextView
                style="@style/textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/gps" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/gps" />

            <TextView
                style="@style/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/from_dashboard_tab" />

            <TextView
                style="@style/textCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/search" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/choose_place" />

            <Button
                android:id="@+id/feedback_button"
                style="@style/textMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background_selector"
                android:text="@string/feedback_prompt" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>