<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main_ui.me.MeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical"
        app:layout_anchor="@id/settings"
        app:layout_anchorGravity="top">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:tint="@color/colorPrimary" />

        <TextView
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/how_to_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/card_selector"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_how_to" />

                <TextView
                    style="@style/textMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/me_how_to"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@color/colorAccent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/feedback_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/card_selector"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/feedback_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_feedback" />

                <TextView
                    style="@style/textMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/me_feedback"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@color/colorAccent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/about_us_option"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/card_selector"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/about_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_info" />

                <TextView
                    style="@style/textMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/me_about_us"
                    android:textStyle="normal" />
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>