<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/places_autocomplete_fullscreen_background"
    android:orientation="vertical"
    tools:context=".ParkingLotActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleTextAppearance="@style/CustomExpandedText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/gallery_swipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/colorAccent" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/colorAccent"
        app:layout_anchor="@+id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_add" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/quantum_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/quantum_grey"
                android:textStyle="italic" />

            <RatingBar
                android:id="@+id/rating"
                style="@android:style/Widget.Material.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:isIndicator="true"
                android:numStars="5"
                android:paddingBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="8dp"
                android:text="@string/opening_hours_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quantum_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/opening_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/quantum_black_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="8dp"
                android:text="@string/price_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quantum_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/quantum_black_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="8dp"
                android:text="@string/note_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quantum_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/quantum_black_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="8dp"
                android:text="@string/comment_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/quantum_black_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/comment_not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/source_sans_pro"
                android:paddingBottom="16dp"
                android:text="@string/comment_not_available"
                android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
                android:textColor="@color/quantum_black_text"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_rating_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>